src/test/deca/context/valid/extension/acces-matrix.deca
// Programme validant l'accès à un élement de la matrice

{
    int[2,2] mat;
    print(mat[1,1]);
}